--- a/Weather App/style.css
+++ b/Weather App/style.css
@@ -44,7 +44,7 @@ nav{
     background-color: transparent;
     font-size: 1.1rem;
     border-bottom: 2px solid white;
-    /*width: 98%;*/
+    width: 98%;
 
 }
 
